[package]
edition = "2021"
name = "gitt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gitt"
path = "src/bin/main.rs"

[dependencies]
clap = {version = "3.1.8", features = ["derive"]}
console = "0.15.0"
dialoguer = "0.10.0"
git-conventional = "0.11.2"
git2 = "0.14.2"
indoc = "1.0.4"
serde = {version = "1.0.136", features = ["derive"]}
thiserror = "1.0.30"
toml = "0.5.8"
