[package]
description = "Git extensions and tools"
edition = "2021"
license = "MIT"
name = "gitext"
repository = "https://github.com/nlargueze/gitext"
version = "0.0.6"

[[bin]]
name = "git-install-hooks"
path = "src/bin/git-install-hooks.rs"

[[bin]]
name = "git-lint"
path = "src/bin/git-lint.rs"

[[bin]]
name = "git-c"
path = "src/bin/git-c.rs"

[[bin]]
name = "git-amend"
path = "src/bin/git-amend.rs"

[[bin]]
name = "git-bump"
path = "src/bin/git-bump.rs"

[[bin]]
name = "git-changelog"
path = "src/bin/git-changelog.rs"

[[bin]]
name = "git-release"
path = "src/bin/git-release.rs"

[dependencies]
atty = "0.2.14"
chrono = {version = "0.4.19", features = ["serde"]}
clap = {version = "3.1.8", features = ["derive"]}
console = "0.15.0"
dialoguer = "0.10.0"
env_logger = "0.9.0"
handlebars = "4.2.2"
indoc = "1.0.4"
log = "0.4.16"
regex = "1.5.5"
semver = "1.0.7"
serde = {version = "1.0.136", features = ["derive"]}
thiserror = "1.0.30"
toml = "0.5.8"
